# haskell-filepicker-policy

./: .gitignore  LICENSE  README.md  default.nix  filepicker-policies.cabal  filepicker-policy.cabal  test.sh
Network/Filepicker/: Handle.hs  Policy.hs  URL.hs
tests/Network/Filepicker/: PolicySpec.hs
