name:                filepicker-policy
version:             0.2.6
synopsis:            API for creating filepicker.com policies
-- description:
license:             MIT
license-file:        LICENSE
author:              Handre Stolp
maintainer:          HanStolpo@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  exposed-modules:     Network.Filepicker.Handle
                       Network.Filepicker.Policy
                       Network.Filepicker.URL
  -- other-modules:
  other-extensions:    DeriveGeneric
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 4.10
               ,       cryptonite >= 0.5
               ,       base64-bytestring >= 1.0.0.1
               ,       aeson >= 0.7.0.6
               ,       bytestring >= 0.10.4.0
               ,       text >= 1.2.1.1
               ,       containers >= 0.5.5.1
               ,       time >= 1.4.2
               ,       memory >= 0.7
               ,       utf8-string >= 1

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 4.9
               ,       filepicker-policy
               ,       hspec >= 1.12
               ,       HUnit >= 1.2.5.2
               ,       raw-strings-qq >= 1.0.2
               ,       aeson >= 0.7.0.6
               ,       bytestring >= 0.10.4.0
               ,       time >= 1.4.2
