name:                filepicker-policy
version:             0.2.6
synopsis:            API for creating filepicker.com policies
-- description:
license:             MIT
license-file:        LICENSE
author:              Handre Stolp
maintainer:          HanStolpo@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 2.0

library
  exposed-modules:     Network.Filepicker.Handle
                       Network.Filepicker.Policy
                       Network.Filepicker.URL
  -- other-modules:
  other-extensions:    DeriveGeneric
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base
               ,       cryptonite
               ,       base64-bytestring
               ,       aeson
               ,       bytestring
               ,       text
               ,       containers
               ,       time
               ,       memory
               ,       utf8-string
